[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my_lib = { path = "./my_lib" }
#my_lib_derive = { path = "./my_lib_derive" }

[workspace]
members = [
    "my_lib",
    "my_lib_derive",
]
